public_en  public_zh_pub versions

--- a/themes/hugo-devresume-theme/layouts/partials/social copy.html
+++ b/themes/hugo-devresume-theme/layouts/partials/social copy.html
@@ -12,9 +12,9 @@
                         {{ end }}
                     </ul>
                     <div class="resume-social-list list-inline mx-auto mb-0 d-inline-block text-muted">
-                    ID: <input type="text"  id="ID" class="d-lg-inline-block text-muted">
-                    PASSWORD: <input type="password"  id="PASSWORD" class="d-lg-inline-block text-muted">
-                    <input type="submit" value="submit" id="submitPost" class="d-lg-inline-block text-muted">
+                    ID: <input type="text"  id="ID" class="d-none d-lg-inline-block text-muted">
+                    PASSWORD: <input type="password"  id="PASSWORD" class="d-none d-lg-inline-block text-muted">
+                    <input type="submit" value="submit" id="submitPost" class="d-none d-lg-inline-block text-muted">
                     <div id="sfc7zz6p4j3jgcyw8w427mwywgalayfex75"></div>
                     <script type="text/javascript" src="https://counter9.stat.ovh/private/counter.js?c=7zz6p4j3jgcyw8w427mwywgalayfex75&down=async" async></script>
                     <noscript>
