--- a/themes/hugo-devresume-theme/layouts/partials/scripts copy.html
+++ b/themes/hugo-devresume-theme/layouts/partials/scripts copy.html
@@ -1,7 +1,7 @@
 
     <!-- FontAwesome JS-->
     <script defer src="https://use.fontawesome.com/releases/v5.8.1/js/all.js" integrity="sha384-g5uSoOSBd7KkhAMlnQILrecXvzst9TdC09/VM+pjDTCM+1il8RHz5fKANTFFb+gQ" crossorigin="anonymous"></script>
-    <script src="assets/scripts-cv.js?a=9"></script>
+    <script src="scripts-cv.js?a=9"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
 
     {{ template "_internal/google_analytics_async.html" . }}
