--- a/themes/hugo-devresume-theme/layouts/partials/summary.html
+++ b/themes/hugo-devresume-theme/layouts/partials/summary.html
@@ -4,7 +4,8 @@
                     <div class="media flex-column flex-md-row align-items-center">
 
                         {{ if .Site.Params.profile.avatar }}
-                        <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="{{ .Site.BaseURL }}/assets/images/{{ .Site.Params.profile.avatar }}" alt="image">
+                        {{/* <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="{{ .Site.BaseURL }}/assets/images/{{ .Site.Params.profile.avatar }}" alt="image"> */}}
+                        <img class="resume-profile-image mb-3 mb-md-0 mr-md-5 ml-md-0 rounded mx-auto" src="{{ .Site.Params.profile.avatarurl }}" alt="image">
                         {{ end }}
 
                         <div class="media-body text-left">
